// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionFooter Prop Tests with both start and end actions should display both start and end actions 1`] = `
<ActionFooter
  end="End Action"
  start="Start Action"
>
  <BlockActionFooter
    className="action-footer"
  >
    <div
      className="block-action-footer with-actions action-footer"
    >
      <div
        className="socket"
      >
        Start Action
      </div>
      <div
        className="empty-center"
      />
      <div
        className="socket"
      >
        End Action
      </div>
    </div>
  </BlockActionFooter>
</ActionFooter>
`;

exports[`ActionFooter Prop Tests with only a start action should only display a start action 1`] = `
<ActionFooter
  start="Start Action"
>
  <BlockActionFooter
    className="action-footer"
  >
    <div
      className="block-action-footer with-actions action-footer"
    >
      <div
        className="socket"
      >
        Start Action
      </div>
      <div
        className="empty-center"
      />
    </div>
  </BlockActionFooter>
</ActionFooter>
`;

exports[`ActionFooter Prop Tests with only an end action should only display an end action 1`] = `
<ActionFooter
  end="End Action"
>
  <BlockActionFooter
    className="action-footer"
  >
    <div
      className="block-action-footer with-actions action-footer"
    >
      <div
        className="empty-center"
      />
      <div
        className="socket"
      >
        End Action
      </div>
    </div>
  </BlockActionFooter>
</ActionFooter>
`;

exports[`ActionFooter Prop Tests without start or end actions should display no actions 1`] = `
<ActionFooter>
  <BlockActionFooter
    className="action-footer"
  >
    <div
      className="block-action-footer action-footer"
    />
  </BlockActionFooter>
</ActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with both start and end socket buttons 1`] = `
<BlockActionFooter
  className="action-footer"
>
  <div
    className="socket"
  >
    <button
      type="button"
    >
      Start Socket
    </button>
  </div>
  <div
    className="empty-center"
  />
  <div
    className="socket"
  >
    <button
      type="button"
    >
      End Socket
    </button>
  </div>
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with only an end socket button 1`] = `
<BlockActionFooter
  className="action-footer"
>
  <div
    className="empty-center"
  />
  <div
    className="socket"
  >
    <button
      type="button"
    >
      End Socket
    </button>
  </div>
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with only one start socket button 1`] = `
<BlockActionFooter
  className="action-footer"
>
  <div
    className="socket"
  >
    <button
      type="button"
    >
      Start Socket
    </button>
  </div>
  <div
    className="empty-center"
  />
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with only two end socket buttons 1`] = `
<BlockActionFooter
  className="action-footer"
>
  <div
    className="empty-center"
  />
  <div
    className="socket"
  >
    <div>
      <button
        type="button"
      >
        End Socket 1
      </button>
      <button
        type="button"
      >
        End Socket 2
      </button>
    </div>
  </div>
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render a footer with only two start socket buttons 1`] = `
<BlockActionFooter
  className="action-footer"
>
  <div
    className="socket"
  >
    <div>
      <button
        type="button"
      >
        Start Socket 1
      </button>
      <button
        type="button"
      >
        Start Socket 2
      </button>
    </div>
  </div>
  <div
    className="empty-center"
  />
</BlockActionFooter>
`;

exports[`ActionFooter Snapshot Tests should render an empty footer 1`] = `
<BlockActionFooter
  className="action-footer"
/>
`;
